# meridian-v2

./: .agenda.md  .env.example  .gitignore  .vercelignore  Dockerfile  docker-compose.yml  next.config.ts  package.json  package.json.tmp  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.edge.config.ts  vercel.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: meridian-complete-brand-guide.md
knowledge/: 01_technical_architecture.md  02_product_architecture.md  03_calculation_engine.md  04_coach_agent.md  05_batch3_prompt_memory_pricing.md  06_batch4_todayhub_onboarding_discover.md
public/: manifest.json  sw.js
scripts/: migrate.js
services/calculation/: .env.example  Dockerfile  pyproject.toml  requirements.txt  server.py
services/calculation/data/: __init__.py  ganzhi_60.py  hidden_stems.py  lunar_calendar.py  relationships.py  solar_terms.py  ziwei_tables.py
services/calculation/engine/: __init__.py  bazi.py  config.py  cycles.py  daily_energy.py  elements.py  lunar.py  main.py  solar.py  types.py  ziwei.py
services/calculation/tests/: __init__.py  test_bazi.py  test_daily_energy.py  test_solar.py
services/memory/: Dockerfile
src/: middleware.ts
src/__tests__/: api-health.test.ts  design-system.test.tsx  integration.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/data/: learn-content.ts
src/db/: migrate.ts
src/hooks/: use-page-view.ts
src/lib/: db.ts  discover-content.ts  env.ts  query-client.tsx  redis.ts  sentry.ts  supabase-server.ts  supabase.ts  use-auth.tsx  utils.ts
(+121 files in other folders)
