[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-calculation-engine"
version = "0.1.0"
description = "Deterministic Chinese metaphysics calculation engine (Ba Zi, Zi Wei, etc.)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = []
dev = ["pytest>=7.0"]
